# phat

./: CMakeLists.txt  ProjectHome.md  README  README.md  fps.cpp  fps.h
addons/: alpha_3.cpp
bit_tree/tags/phat_1_0/include/phat/: compute_persistence_pairs.h
bit_tree/tags/phat_1_0/src/: self_test.cpp
bit_tree/trunk/examples/: README
branches/bit-tree/: CMakeLists.txt
branches/bit-tree/include/phat/representations/: bit_tree_pivot_column.h  vector_set.h  vector_vector.h
branches/bit-tree/src/: phat.cpp  self_test.cpp
branches/bit_tree/trunk/include/phat/: boundary_matrix.h
branches/bit_tree/trunk/src/: phat.cpp  self_test.cpp  simple_example.cpp
branches/field_coefficients/: CMakeLists.txt  README
branches/field_coefficients/include/phat/: boundary_matrix.h  compute_persistence_pairs.h
branches/field_coefficients/include/phat/helpers/: misc.h
branches/field_coefficients/include/phat/representations/: full_pivot_column.h  vector_set.h  vector_vector.h
branches/field_coefficients/src/: self_test.cpp  simple_example.cpp
branches/stack_access/: CMakeLists.txt
branches/stack_access/include/phat/: boundary_matrix.h  compute_persistence_pairs.h  read_only_boundary_matrix.h  stack_access_boundary_matrix.h
branches/stack_access/include/phat/algorithms/: standard_reduction.h
branches/stack_access/include/phat/auto_reducing/: boundary_matrix.h
branches/stack_access/include/phat/auto_reducing/representations/: abstract_pivot.h  bit_tree_pivot.h  sparse_pivot.h
branches/stack_access/include/phat/common/: basic_types.h  compute_persistence_pairs.h  dualize.h  full_column.h  persistence_pairs.h  sparse_column.h  thread_local_storage.h
branches/stack_access/include/phat/random_access/: boundary_matrix.h  compute_persistence_pairs.h
branches/stack_access/include/phat/random_access/algorithms/: chunk_reduction.h
branches/stack_access/include/phat/random_access/reducers/: chunk.h  row.h  row_reduction.h  standard.h  straight_twist.h  twist.h
branches/stack_access/include/phat/random_access/representations/: abstract_pivot_column.h  bit_tree_pivot.h  full_pivot.h  sparse_pivot.h  vector_list.h  vector_set.h  vector_vector.h
branches/stack_access/include/phat/representations/: vector_set.h
branches/stack_access/include/phat/stack_access/: boundary_matrix.h  compute_persistence_pairs.h
branches/stack_access/include/phat/stack_access/reducers/: standard.h  straight_twist.h
branches/stack_access/include/phat/stack_access/representations/: abstract_pivot.h  bit_tree_compressed_vector.h
branches/stack_access/src/: benchmark.cpp  phat.cpp  random_access_example.cpp  self_test.cpp  simple_example.cpp  stack_access_example.cpp
include/phat/: boundary_matrix.h  compute_persistence_pairs.h  random_access_boundary_matrix.h
include/phat/algorithms/: block_spectral_sequence_reduction.h  chunk_reduction.h  spectral_sequence_reduction.h  standard_reduction.h
include/phat/auto_reducing/: compute_persistence_pairs.h
include/phat/auto_reducing/reducers/: straight_twist.h
include/phat/auto_reducing/representations/: abstract_pivot.h  full_pivot.h
include/phat/common/: basic_types.h  bit_tree_column.h  compute_persistence_pairs.h  const_boundary_matrix.h  dualize.h  persistence_pairs.h  sparse_column.h
include/phat/helpers/: dualize.h  misc.h
include/phat/random_access/: boundary_matrix.h  compute_persistence_pairs.h
include/phat/random_access/reducers/: row.h  standard.h  twist_reduction.h
include/phat/random_access/representations/: abstract_pivot.h  bit_tree_compressed_vector.h  bit_tree_pivot.h  full_pivot.h  sparse_pivot.h  vector_set.h
include/phat/representations/: abstract_pivot_column.h  bit_tree_pivot_column.h  heap_pivot_column.h  sparse_pivot_column.h  vector_heap.h  vector_list.h  vector_vector.h
include/phat/stack_access/: boundary_matrix.h
include/phat/stack_access/reducers/: standard.h  twist.h
include/phat/stack_access/representations/: abstract_pivot.h  bit_tree_compressed_vector.h  bit_tree_pivot.h  full_pivot.h  sparse_pivot.h
src/: auto_reduce_example.cpp  benchmark.cpp  convert.cpp  info.cpp  phat.cpp  relative_example.cpp  self_test.cpp  simple_example.cpp  stack_access_example.cpp
tags/phat_1_0/include/phat/: boundary_matrix.h
tags/phat_1_0/include/phat/helpers/: thread_local_storage.h
tags/phat_1_1/include/phat/: persistence_pairs.h
tags/phat_1_1/include/phat/representations/: bit_tree_pivot_column.h
tags/phat_1_1/src/: phat.cpp
tags/phat_1_2/include/phat/: boundary_matrix.h
tags/phat_1_2/src/: benchmark.cpp  self_test.cpp
tags/phat_1_2_1/include/phat/representations/: bit_tree_pivot_column.h
tags/phat_1_2_1/src/: phat.cpp
tags/phat_1_3_0/: README
tags/phat_1_3_0/include/phat/: boundary_matrix.h
tags/phat_1_3_0/include/phat/algorithms/: spectral_sequence_reduction.h
tags/phat_1_3_0/include/phat/representations/: heap_pivot_column.h
tags/phat_1_3_0/src/: benchmark.cpp  self_test.cpp
tags/phat_1_4_0/: README
trunk/: CMakeLists.txt  README
trunk/addons/: alpha_3.cpp
trunk/include/phat/: boundary_matrix.h  compute_persistence_pairs.h
trunk/include/phat/algorithms/: block_spectral_sequence_reduction.h  chunk_reduction.h
trunk/include/phat/helpers/: dualize.h  misc.h
trunk/include/phat/representations/: abstract_pivot_column.h  bit_tree_pivot_column.h  full_pivot_column.h  sparse_pivot_column.h  vector_vector.h
trunk/src/: benchmark.cpp  convert.cpp  phat.cpp  self_test.cpp
(+4 files in other folders)
